--- a/config.json
+++ b/config.json
@@ -56,7 +56,8 @@
         },
         "redis": {
             "host": "127.0.0.1",
-            "port": 6379
+            "port": 6379,
+            "password": ""
         }
     },
 
@@ -83,7 +84,8 @@
 
     "redis": {
         "host": "127.0.0.1",
-        "port": 6379
+        "port": 6379,
+        "password": ""
     },
 
     "switching": {
